--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,9 +17,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "postinstall": "ts-patch install"
   },
   "dependencies": {
+    "@nestia/core": "^1.6.7",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -27,6 +29,8 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@nestia/e2e": "^0.3.6",
+    "@nestia/sdk": "^1.6.7",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -40,15 +44,18 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
+    "nestia": "^4.5.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
+    "ts-patch": "^3.0.2",
     "tsconfig": "workspace:*",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^4.7.4"
+    "types": "workspace:*",
+    "typescript": "^5.2.2"
   },
   "jest": {
     "moduleFileExtensions": [
